# NeuralNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NNVisualizer/: CMakeLists.txt
NNVisualizer/src/: Visualizer.cpp  Visualizer.h  main.cpp  nnvpch.cpp  nnvpch.h
NNVisualizer/src/NNVisualizer/: Visualizer.cpp  Visualizer.h
NNVisualizer/src/NNVisualizer/Components/: Button.cpp  Button.h  ButtonBuilder.h  Component.h  ComponentBuilderBase.h  ComponentFactory.cpp  ComponentFactory.h  Components.h  Dropdown.cpp  Dropdown.h  DropdownBuilder.h  TextField.cpp  TextField.h  TextFieldBuilder.h
NNVisualizer/src/NNVisualizer/Events/: EventHandler.cpp  EventHandler.h
NNVisualizer/src/NNVisualizer/Renderer/: Camera.cpp  Camera.h
NNVisualizer/src/NNVisualizer/Theme/: Configuration.nnc
NNVisualizer/src/NNVisualizer/Utils/: ConfigurationReader.cpp  ConfigurationReader.h  DirectxUtilities.h  LoopState.h  Utils.h  ValueParser.h
NeuralNetwork/: CMakeLists.txt
NeuralNetwork/src/: main.cpp  nnpch.cpp  nnpch.h
NeuralNetwork/src/Core/: LoopState.h  NeuralNetwork.cpp  NeuralNetwork.h
NeuralNetwork/src/Core/ActivationFunction/: ActivationFunction.h
NeuralNetwork/src/Core/Layer/: Layer.cpp  Layer.h
NeuralNetwork/src/Core/Neuron/: Neuron.cpp  Neuron.h
NeuralNetwork/src/Core/NeuronActivation/: NeuronActivation.cpp  NeuronActivation.h
NeuralNetwork/src/Core/Utils/: Core.h  ExceptionHandler.cpp  ExceptionHandler.h  Exceptions.h  LoopState.h  Matrix.cpp  Matrix.h  Random.cpp  Random.h  Utils.h
